@@ -2,6 +2,9 @@
 
 Changes with Apache 2.4.4
 
+  *) mod_proxy_balancer: The nonce is only derived from the UUID iff
+     not set via the 'nonce' balancer param. [Jim Jagielski]
+
   *) mod_ssl: Match wildcard SSL certificate names in proxy mode.  
      PR 53006.  [Joe Orton]
 
